made building releases not dependent on travis, start towards cleaning up nms code (i didnt plan on using this much nms)